hard-gists/4260442/run.log
=== Docker Run Log for 4260442 ===
Started at: Mi 29. Okt 14:34:13 CET 2025

[2025-10-29 14:34:13] START: Running container for 4260442
[2025-10-29 14:34:14] SUCCESS: Container c7c59d8b27fd839cff85f11fd6e7bd130864f7d9abe2e6e818db1a9700f2d157 started for 4260442
=== Container logs for 4260442 ===
  File "/snippet.py", line 40
    print "Done"
    ^^^^^^^^^^^^
SyntaxError: Missing parentheses in call to 'print'. Did you mean print(...)?
=== End of logs for 4260442 ===
[2025-10-29 14:34:16] INFO: Container c7c59d8b27fd839cff85f11fd6e7bd130864f7d9abe2e6e818db1a9700f2d157 has stopped
